objects/Timesheet_Locale__mdt.object
<CustomObject>
    <fields>
        <fullName>Dateformat__c</fullName>
        <label>Dateformat</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delimiter__c</fullName>
        <label>Delimiter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Timesheet Locale</label>
    <listViews>
        <fullName>All_Values</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Dateformat__c</columns>
        <columns>Delimiter__c</columns>
        <columns>Locale__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Values</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Timesheet Locales</pluralLabel>
</CustomObject>